--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -332,6 +332,9 @@
     .elementor-container{
       .section-title-wrapper{
         padding: 0 40px;
+        @include sm{
+          padding: 0 12px;
+        }
         .section-title{
           width: 100%;
         }
@@ -342,7 +345,7 @@
           }
         }
         .btn-wrapper{
-          @include md{
+          @include rmaxwd(991){
             text-align: center;
           }
         }
@@ -446,6 +449,9 @@
             padding: 0 36px;
             width: 80%;
             margin: 0 auto;
+          }
+          @include sm{
+            padding: 0 12px;
           }
         }
       }
@@ -556,7 +562,7 @@
               margin: 0 auto;
             }
           .btn-wrapper{
-            @include md{
+            @include rmaxwd(991){
               text-align: center;
             }
           }
